# itsaydrian-stream

./: .gitignore  Makefile  README.md  netlify.toml  next.config.js  package-lock.json  package.json
app/routes/resources/: twitchEventSub.tsx
app/utils/: alerts.server.ts  pusher.server.ts  twitch.server.ts
components/: Chat.js  EmoteDrop.js
components/Chat/: Chat.module.css  index.js
context/: chat.js
crates/twitch_eventsub/: Cargo.toml
crates/twitch_eventsub/src/: main.rs
crates/twitch_user/: Cargo.toml
crates/twitch_user/src/: main.rs
middleware/: withVerifyTwitch.js
netlify/functions/: twitch.js  twitchUser.js
netlify/functions/twitch_eventsub/: Cargo.toml
netlify/functions/twitch_eventsub/src/: main.rs
netlify/functions/twitch_user/: Cargo.toml
netlify/functions/twitch_user/src/: main.rs
netlify/lib/: alerts.js  courier.js
pages/: _app.js  alerts.js  chat.js  overlays.js
pages/api/webhook/: callback.js
scripts/: twitch_subscribe_followers.sh  twitch_subscribe_raids.sh  twitch_subscribe_redemptions.sh  twitch_subscribe_subscriptions.sh
styles/: globals.css
utils/: parse-twitch-chat.js
