[package]
name = "twitch_eventsub"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
tokio = { version = "1.0.1", features = ["full"] }
serde_json = "1.0.61"
lamedh_http = "0.3.0"
eyre = "0.6.5"
# reqwest = { version = "0.11.4", default-features = false, features = ["json", "rustls-tls"] }
twitch_api2 = { version = "0.6.0-rc.1", features = ["eventsub", "helix", "hmac", "reqwest_client"]}
# twitch_oauth2 = "0.5.2"
