[package]
name = "twitch_user"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
tokio = { version = "1.0.1", features = ["full"] }
serde_json = "1.0.61"
lamedh_http = "0.3.0"
eyre = "0.6.5"
reqwest = "0.11.4"
twitch_api2 = { version = "0.6.0-rc.1", features = ["helix", "reqwest_client"]}
twitch_oauth2 = "0.5.2"
