[package]
name = "twitch_eventsub"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.5.0"
serde = { version = "1.0.118", features = ["derive"] }
tokio = { version = "1.12.0", features = ["full"] }
http = "0.2.5"
lambda_runtime = "0.4.1"
serde_json = "1.0.67"
eyre = "0.6.5"
reqwest = { version = "0.11.4", default-features = false, features = [
  "json",
  "rustls-tls",
] }
twitch_api2 = { version = "0.6.0-rc.3", features = [
  "eventsub",
  "helix",
  "hmac",
  "reqwest_client",
] }
twitch_oauth2 = { version = "0.6.0", features = ["reqwest_client"] }
pusher = "0.4.3"
