[package]
name = "twitch_eventsub"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.5.0"
eyre = "0.6.5"
hex = "0.3.1"
hmac = "0.12.0"
http = "0.2.5"
lambda_runtime = "0.4.1"
pusher = "0.4.3"
reqwest = { version = "0.11.4", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.67"
sha2 = "0.10.1"
tokio = { version = "1.12.0", features = ["full"] }
twitch_api2 = { version = "0.6.0-rc.3", features = [
  "eventsub",
  "helix",
  "hmac",
  "reqwest_client",
] }
twitch_oauth2 = { version = "0.6.0", features = ["reqwest_client"] }
